tests/paczka1/small_fuzzy/42583107.err
Error in line 2: bGKy S108 2,2
Error in line 4: S475 S711 44,<
Error in line 1: S475 S475 91,8
